--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "n",
   "version": "0.1.0",
   "private": true,
- 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -43,6 +42,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
-    "parcel": "^2.10.1"
+    "parcel": "^2.10.1",
+    "tailwindcss": "^3.4.1"
   }
 }
